--- a/app/src/main/res/layout/activity_square_bash.xml
+++ b/app/src/main/res/layout/activity_square_bash.xml
@@ -1,64 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/background"
-    tools:context="com.quarklab.squarebash.SquareBash">
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/gridLayout">
 
-        <TextView
+
+        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Square Bash"
-            android:id="@+id/textView"
-            android:textSize="48dp"
-            android:layout_marginTop="50dp"
-            android:shadowColor="#ffe5e5"
-            android:shadowDx="0"
-            android:shadowDy="0"
-            android:shadowRadius="15"
-            android:layout_row="3"
-            android:layout_column="0"
-            android:layout_columnSpan="2"
-            android:gravity="center_vertical|center_horizontal" />
+            android:id="@+id/gridLayout"
+            android:columnCount="2"
+            android:rowCount="12"
+            android:background="@drawable/background"
+            android:layout_centerInParent="true"
+            tools:context="com.quarklab.squarebash.SquareBash">
+            <Button
+                android:layout_width="28sp"
+                android:layout_height="28sp"
+                android:id="@+id/sound"
+                android:background="@drawable/speaker"
+                android:layout_row="1"
+                android:layout_column="0"
+                android:soundEffectsEnabled="false"
+                android:layout_marginLeft="10sp"
+                android:layout_marginTop="10sp" />
 
-        <Button
-            android:background="@drawable/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/play"
-            android:text="Play"
-            android:textSize="40dp"
-            android:textColor="#fff"
-            android:layout_row="9"
-            android:layout_column="1"
-            android:gravity="center_horizontal|center_vertical"
-            android:layout_gravity="center_horizontal"
-            android:layout_rowSpan="2"
-            android:layout_marginBottom="20dp" />
-    </GridLayout>
+            <Button
+                android:layout_width="28sp"
+                android:layout_height="28sp"
+                android:id="@+id/button2"
+                android:background="@drawable/trophy"
+                android:layout_row="1"
+                android:layout_column="1"
+                android:soundEffectsEnabled="false"
+                android:layout_gravity="right"
+                android:layout_marginRight="10sp"
+                android:layout_marginTop="10sp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Quarklab"
-        android:id="@+id/textView2"
-        android:layout_row="0"
-        android:layout_column="1"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/square_bash"
+                android:id="@+id/textView"
+                android:textSize="48sp"
+                android:layout_marginTop="20sp"
+                android:shadowColor="#ffe5e5"
+                android:shadowDx="0"
+                android:shadowDy="0"
+                android:shadowRadius="15"
+                android:layout_row="4"
+                android:layout_column="0"
+                android:layout_columnSpan="2"
+                android:gravity="center_vertical|center_horizontal" />
 
-</RelativeLayout>
+            <Button
+                android:background="@drawable/button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/play"
+                android:text="@string/play"
+                android:textSize="40sp"
+                android:textColor="#fff"
+                android:layout_row="6"
+                android:layout_column="1"
+                android:soundEffectsEnabled="false"
+                android:layout_marginBottom="10dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginRight="25sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/quarklab"
+                android:id="@+id/textView2"
+                android:layout_row="7"
+                android:layout_column="1"
+                android:layout_gravity="center_horizontal"
+                android:layout_rowSpan="5"
+                android:layout_marginRight="25sp" />
+        </GridLayout>
+
+
+
