--- a/app/src/main/res/layout/activity_square_bash.xml
+++ b/app/src/main/res/layout/activity_square_bash.xml
@@ -25,7 +25,7 @@
             <Button
                 android:layout_width="28sp"
                 android:layout_height="28sp"
-                android:id="@+id/button2"
+                android:id="@+id/trophy"
                 android:background="@drawable/trophy"
                 android:layout_row="1"
                 android:layout_column="1"
