Finish Leaderboard screen

--- a/app/src/main/res/layout/activity_leader_board.xml
+++ b/app/src/main/res/layout/activity_leader_board.xml
@@ -10,4 +10,28 @@
     tools:context="com.quarklab.squarebash.LeaderBoard"
     android:background="@drawable/background3">
 
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/leaderBoardList"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="47dp"
+        android:layout_centerHorizontal="true" />
+    <ImageView
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:background="@drawable/leaderboard" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Leader Board"
+        android:id="@+id/textView3"
+        android:textSize="30sp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="55dp"
+        android:layout_marginTop="5dp"/>
+
 </RelativeLayout>
