--- a/app/src/main/res/layout/toast.xml
+++ b/app/src/main/res/layout/toast.xml
@@ -5,21 +5,19 @@
     android:layout_height="fill_parent"
     android:orientation="horizontal"
     android:padding="30dp"
-    android:foreground="#ffffff"
+    android:foreground="#fff"
 
     >
-    <TextView
-        android:id="@+id/text"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:gravity="center_vertical"
-        android:textColor="#00b400"
-        android:textSize="28dp"
-        android:textStyle="bold"
-        android:singleLine="true"
-        android:shadowColor="#000000"
-        android:shadowDx="0"
-        android:shadowDy="0"
-        android:shadowRadius="10"/>
 
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Large Text"
+        android:id="@+id/text"
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:textAlignment="center"
+        android:textColor="#1cbe00"
+        android:textSize="29sp"
+        android:textStyle="bold" />
 </LinearLayout>
