--- a/app/src/main/res/layout/activity_square_bash.xml
+++ b/app/src/main/res/layout/activity_square_bash.xml
@@ -1,83 +1,170 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:id="@+id/linearLayout"
+    android:columnCount="2"
+    android:rowCount="12"
+    android:background="#eee"
+    android:layout_centerInParent="true"
+    tools:context="com.quarklab.squarebash.SquareBash"
+    android:orientation="vertical">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/square_bash"
+        android:id="@+id/textView"
+        android:textSize="48sp"
+        android:layout_marginTop="20sp"
+        android:shadowColor="#ffe5e5"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="15"
+        android:layout_row="4"
+        android:layout_column="0"
+        android:layout_columnSpan="2"
+        android:gravity="center_vertical|center_horizontal" />
 
-
-        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="match_parent"
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            />
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/gridLayout"
-            android:columnCount="2"
-            android:rowCount="12"
-            android:background="@drawable/background"
-            android:layout_centerInParent="true"
-            tools:context="com.quarklab.squarebash.SquareBash">
-            <Button
-                android:layout_width="28sp"
-                android:layout_height="28sp"
-                android:id="@+id/sound"
-                android:background="@drawable/speaker"
-                android:layout_row="1"
-                android:layout_column="0"
-                android:soundEffectsEnabled="false"
-                android:layout_marginLeft="10sp"
-                android:layout_marginTop="10sp" />
+            android:id="@+id/scoreText"
+            android:textSize="28sp"
+            android:layout_gravity="center|right"
+            android:text="2500"
+            />
+        <ImageView
+            android:layout_width="48sp"
+            android:layout_height="48sp"
+            android:background="@drawable/coin"
+            android:layout_marginLeft="5sp"
+            />
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            />
+    </LinearLayout>
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            />
+        <Button
+            android:layout_width="28sp"
+            android:layout_height="28sp"
+            android:id="@+id/sound"
+            android:background="@drawable/speaker"
+            android:soundEffectsEnabled="false"
+            android:layout_gravity="center_vertical"
+            android:elevation="5sp"
+            />
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            />
+        <Button
+            android:background="@drawable/button"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:id="@+id/play"
+            android:text="@string/play"
+            android:textSize="20sp"
+            android:textColor="#fff"
+            android:soundEffectsEnabled="false"
+            android:layout_marginBottom="10dp"
+            android:layout_gravity="center_horizontal"
+            android:elevation="200sp"/>
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            />
+        <Button
+            android:layout_width="28sp"
+            android:layout_height="28sp"
+            android:id="@+id/trophy"
+            android:background="@drawable/trophy"
+            android:soundEffectsEnabled="false"
+            android:layout_gravity="right|center_vertical"
+            />
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            />
+    </LinearLayout>
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        >
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/quarklab"
+            android:id="@+id/textView2"
+            android:layout_row="7"
+            android:layout_column="1"
+            android:layout_gravity="center"
+            android:layout_rowSpan="5" />
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            />
+    </LinearLayout>
 
-            <Button
-                android:layout_width="28sp"
-                android:layout_height="28sp"
-                android:id="@+id/trophy"
-                android:background="@drawable/trophy"
-                android:layout_row="1"
-                android:layout_column="1"
-                android:soundEffectsEnabled="false"
-                android:layout_gravity="right"
-                android:layout_marginRight="10sp"
-                android:layout_marginTop="10sp" />
+</LinearLayout>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="@string/square_bash"
-                android:id="@+id/textView"
-                android:textSize="48sp"
-                android:layout_marginTop="20sp"
-                android:shadowColor="#ffe5e5"
-                android:shadowDx="0"
-                android:shadowDy="0"
-                android:shadowRadius="15"
-                android:layout_row="4"
-                android:layout_column="0"
-                android:layout_columnSpan="2"
-                android:gravity="center_vertical|center_horizontal" />
 
-            <Button
-                android:background="@drawable/button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/play"
-                android:text="@string/play"
-                android:textSize="40sp"
-                android:textColor="#fff"
-                android:layout_row="6"
-                android:layout_column="1"
-                android:soundEffectsEnabled="false"
-                android:layout_marginBottom="10dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginRight="25sp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/quarklab"
-                android:id="@+id/textView2"
-                android:layout_row="7"
-                android:layout_column="1"
-                android:layout_gravity="center_horizontal"
-                android:layout_rowSpan="5"
-                android:layout_marginRight="25sp" />
-        </GridLayout>
+
+
+
+
+
+
 
 
 
