--- a/app/src/main/res/layout/activity_square_bash.xml
+++ b/app/src/main/res/layout/activity_square_bash.xml
@@ -79,45 +79,52 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             />
-        <Button
-            android:layout_width="28sp"
-            android:layout_height="28sp"
+        <ImageButton
+            android:layout_width="80sp"
+            android:layout_height="80sp"
             android:id="@+id/sound"
-            android:background="@drawable/speaker"
+            android:padding="10sp"
+            android:background="@drawable/button"
             android:soundEffectsEnabled="false"
-            android:layout_gravity="center_vertical"
+            android:src="@drawable/speaker"
             android:elevation="5sp"
+            android:layout_gravity="left|center_vertical"
             />
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_weight="1"
             />
-        <Button
-            android:background="@drawable/button"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+        <ImageButton
+            android:background="@drawable/glacier_button"
+            android:layout_width="100sp"
+            android:layout_height="100sp"
             android:id="@+id/play"
             android:text="@string/play"
-            android:textSize="20sp"
-            android:textColor="#fff"
+            android:padding="5sp"
             android:soundEffectsEnabled="false"
             android:layout_marginBottom="10dp"
+            android:src="@drawable/play"
             android:layout_gravity="center_horizontal"
-            android:elevation="200sp"/>
+            android:elevation="5sp"/>
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_weight="1"
             />
-        <Button
-            android:layout_width="28sp"
-            android:layout_height="28sp"
+        <ImageButton
+            android:layout_width="80sp"
+            android:layout_height="80sp"
             android:id="@+id/trophy"
-            android:background="@drawable/trophy"
+            android:padding="10sp"
+            android:adjustViewBounds="true"
+            android:background="@drawable/button"
             android:soundEffectsEnabled="false"
+            android:src="@drawable/trophy"
+            android:elevation="5sp"
             android:layout_gravity="right|center_vertical"
             />
+
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
