--- a/app/src/main/res/layout/activity_square_bash.xml
+++ b/app/src/main/res/layout/activity_square_bash.xml
@@ -7,7 +7,7 @@
     android:id="@+id/linearLayout"
     android:columnCount="2"
     android:rowCount="12"
-    android:background="#eee"
+    android:background="@drawable/backgblue_png"
     android:layout_centerInParent="true"
     tools:context="com.quarklab.squarebash.SquareBash"
     android:orientation="vertical">
