--- a/app/src/main/res/layout/activity_leader_board.xml
+++ b/app/src/main/res/layout/activity_leader_board.xml
@@ -8,11 +8,10 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.quarklab.squarebash.LeaderBoard"
-    android:background="#eee">
+    android:background="@drawable/backgblue_png">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="15sp"
         >
         <ImageView
             android:layout_width="48dp"
@@ -25,6 +24,7 @@
             android:text="Leader Board"
             android:id="@+id/textView3"
             android:textSize="30sp"
+            android:textColor="#FFF"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
