--- a/app/src/main/res/layout/activity_square_bash.xml
+++ b/app/src/main/res/layout/activity_square_bash.xml
@@ -18,11 +18,12 @@
         android:text="@string/square_bash"
         android:id="@+id/textView"
         android:textSize="48sp"
+        android:textColor="#FFF"
         android:layout_marginTop="20sp"
-        android:shadowColor="#ffe5e5"
+        android:shadowColor="#2f2f2f"
         android:shadowDx="0"
         android:shadowDy="0"
-        android:shadowRadius="15"
+        android:shadowRadius="20"
         android:layout_row="4"
         android:layout_column="0"
         android:layout_columnSpan="2"
