--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -5,6 +5,10 @@
     xmlns:facebook="http://schemas.android.com/apk/res-auto">
     <TableRow
         android:padding="10sp"
+        android:layout_marginBottom="5sp"
+        android:background="#FFF"
+        android:showDividers="none"
+        android:elevation="2sp"
         >
         <com.facebook.login.widget.ProfilePictureView
             android:id="@+id/image"
@@ -52,8 +56,8 @@
             <ImageView
                 android:layout_width="35sp"
                 android:layout_height="35sp"
-                android:layout_marginTop="15dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5sp"
+                android:layout_marginLeft="10sp"
                 android:id="@+id/trophy"
                 />
             <View
