--- a/app/src/main/res/drawable/red_button.xml
+++ b/app/src/main/res/drawable/red_button.xml
@@ -5,10 +5,10 @@
             <solid android:color="#CE5A57" />
         </shape>
     </item>
-    <item android:top="80dp" android:left="80dp" android:right="80dp" android:bottom="80dp" android:gravity="bottom|center_vertical">
+    <item android:top="70dp" android:left="70dp" android:right="70dp" android:bottom="70dp" android:gravity="bottom|center_vertical">
         <shape android:shape="rectangle">
             <solid android:color="#CE5A57" />
-            <corners android:radius="20dp" />
+            <corners android:radius="15sp" />
         </shape>
     </item>
 </layer-list>
