--- a/app/src/main/res/layout/activity_game_board.xml
+++ b/app/src/main/res/layout/activity_game_board.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     tools:context=".GameBoard"
-    android:background="@drawable/backgblue_png"
-    >
+    android:background="@drawable/backgblue_png">
 
     <GridView
         android:id="@+id/GameBoard"
@@ -19,17 +19,17 @@
         android:scrollIndicators="none"
         android:paddingLeft="0dp"
         android:paddingRight="0dp"
-        android:paddingBottom="0dp"
-        android:paddingTop="0dp"
-        android:padding="0dp"
-        android:layout_marginTop="10sp"
+        android:paddingBottom="10sp"
+        android:paddingTop="10sp"
+        android:layout_marginTop="20sp"
+        android:layout_marginBottom="20sp"
         android:fastScrollEnabled="false">
     </GridView>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="2sp"
+        android:layout_marginTop="10sp"
         >
         <View
             android:layout_width="0dp"
@@ -57,5 +57,16 @@
             android:layout_weight="1"
             />
     </LinearLayout>
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_ad_unit_id">
+    </com.google.android.gms.ads.AdView>
+
 
 </FrameLayout>
