--- a/app/src/main/res/drawable-normal-mdpi/block.xml
+++ b/app/src/main/res/drawable-normal-mdpi/block.xml
@@ -2,12 +2,12 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:top="@dimen/_15sdp" android:left="@dimen/_15sdp" android:right="@dimen/_15sdp" android:bottom="@dimen/_15sdp" android:gravity="bottom|center_vertical">
         <shape android:shape="oval">
-            <solid android:color="#86AC41" />
+            <solid android:color="#FAFAFA" />
         </shape>
     </item>
     <item android:top="@dimen/_65sdp" android:left="@dimen/_65sdp" android:right="@dimen/_65sdp" android:bottom="@dimen/_65sdp" android:gravity="bottom|center_vertical">
         <shape android:shape="rectangle">
-            <solid android:color="#86AC41" />
+            <solid android:color="#FAFAFA" />
             <corners android:radius="@dimen/_15sdp" />
         </shape>
     </item>
