--- a/app/src/main/res/drawable/warm_button.xml
+++ b/app/src/main/res/drawable/warm_button.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:top="16dp" android:left="16dp" android:right="16dp" android:bottom="16dp" android:gravity="bottom|center_vertical">
+    <item android:top="@dimen/_15sdp" android:left="@dimen/_15sdp" android:right="@dimen/_15sdp" android:bottom="@dimen/_15sdp" android:gravity="bottom|center_vertical">
         <shape android:shape="oval">
             <solid android:color="#E1B16A" />
         </shape>
     </item>
-    <item android:top="70sp" android:left="70sp" android:right="70sp" android:bottom="70sp" android:gravity="bottom|center_vertical">
+    <item android:top="@dimen/_65sdp" android:left="@dimen/_65sdp" android:right="@dimen/_65sdp" android:bottom="@dimen/_65sdp" android:gravity="bottom|center_vertical">
         <shape android:shape="rectangle">
             <solid android:color="#E1B16A" />
-            <corners android:radius="15sp" />
+            <corners android:radius="@dimen/_15sdp" />
         </shape>
     </item>
 </layer-list>
