--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -5,8 +5,9 @@
     xmlns:facebook="http://schemas.android.com/apk/res-auto">
     <TableRow
         android:padding="10sp"
+        android:layout_width="match_parent"
         android:layout_marginBottom="5sp"
-        android:background="#FFF"
+        android:background="#FFFFFF"
         android:showDividers="none"
         android:elevation="2sp"
         >
