--- a/app/src/main/res/layout/activity_leader_board.xml
+++ b/app/src/main/res/layout/activity_leader_board.xml
@@ -41,23 +41,23 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:layout_marginTop="60dp"
         android:layout_centerHorizontal="true" />
-    <com.mopub.mobileads.MoPubView
-        android:id="@+id/adviewMopub"
-        android:layout_width="fill_parent"
-        android:layout_height="50sp"
-        android:layout_marginBottom="50sp"
-        android:layout_gravity="bottom"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        />
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id">
-    </com.google.android.gms.ads.AdView>
+    <!--<com.mopub.mobileads.MoPubView-->
+        <!--android:id="@+id/adviewMopub"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="50sp"-->
+        <!--android:layout_marginBottom="50sp"-->
+        <!--android:layout_gravity="bottom"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--/>-->
+    <!--<com.google.android.gms.ads.AdView-->
+        <!--android:id="@+id/adView"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="bottom"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--ads:adSize="BANNER"-->
+        <!--ads:adUnitId="@string/banner_ad_unit_id">-->
+    <!--</com.google.android.gms.ads.AdView>-->
 </RelativeLayout>
