--- a/app/src/main/res/layout/activity_leader_board.xml
+++ b/app/src/main/res/layout/activity_leader_board.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.quarklab.squarebash.LeaderBoard"
     android:background="@drawable/backgblue_png">
@@ -22,7 +21,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Leader Board"
-            android:id="@+id/textView3"
+            android:id="@+id/title"
             android:textSize="30sp"
             android:textColor="#FFF"
             android:layout_alignParentTop="true"
