--- a/app/src/main/res/layout/activity_square_bash.xml
+++ b/app/src/main/res/layout/activity_square_bash.xml
@@ -15,8 +15,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/square_bash"
-        android:id="@+id/textView"
+        android:text="@string/title"
+        android:id="@+id/title"
         android:textSize="48sp"
         android:textColor="#FFF"
         android:layout_marginTop="20sp"
