--- a/app/src/main/res/layout/activity_game_board.xml
+++ b/app/src/main/res/layout/activity_game_board.xml
@@ -28,16 +28,8 @@
         android:orientation="horizontal"
         android:layout_marginTop="10sp"
         >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="4"
-            android:id="@+id/lifes"
-            android:layout_gravity="center|right"
-            android:editable="false"
-            android:layout_marginLeft="@dimen/_10sdp"
-            android:textColor="#000" />
+
+
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -47,11 +39,27 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="4"
+            android:id="@+id/lifes"
+            android:layout_gravity="center|right"
+            android:editable="false"
+            android:textColor="#000" />
+        <ImageView
+            android:layout_width="20sp"
+            android:layout_height="20sp"
+            android:id="@+id/heart"
+            android:background="@drawable/heart"
+            android:layout_marginRight="@dimen/_10sdp"
+            android:layout_marginLeft="5sp"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="0"
             android:id="@+id/score"
             android:layout_gravity="center|right"
             android:editable="false"
-            android:layout_marginLeft="-17dp"
             android:textColor="#000" />
         <ImageView
             android:layout_width="20sp"
