--- a/app/src/main/res/layout/activity_game_board.xml
+++ b/app/src/main/res/layout/activity_game_board.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GameBoard"
-    android:background="@drawable/backgblue_png">
+    tools:context=".GameBoard">
 
     <GridView
         android:id="@+id/GameBoard"
@@ -14,7 +13,6 @@
         android:numColumns="3"
         android:stretchMode="columnWidth"
         android:layout_gravity="center|top"
-        android:background="@drawable/backgblue_png"
         android:scrollIndicators="none"
         android:paddingLeft="0dp"
         android:paddingRight="0dp"
@@ -26,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="10sp"
+        android:padding="5sp"
         >
 
 
