--- a/app/src/main/res/drawable/green_button.xml
+++ b/app/src/main/res/drawable/green_button.xml
@@ -1,8 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+
+    <!-- くぼみ -->
     <item android:left="@dimen/_10sdp" android:right="@dimen/_10sdp" android:gravity="center_horizontal|center_vertical">
-        <shape android:shape="oval">
-            <solid android:color="#86AC41" />
+        <shape android:shape="oval" >
+            <solid android:color="#102f2f2f" />
         </shape>
     </item>
+
+    <!-- グラデーション下地 -->
+    <item android:left="@dimen/_10sdp" android:right="@dimen/_10sdp" android:gravity="center_horizontal|center_vertical">
+        <shape android:shape="oval" >
+            <gradient
+                android:angle="90"
+                android:endColor="#6BAF14"
+                android:startColor="#579B00"
+                android:centerColor="#579B00"
+                android:type="linear" />
+        </shape>
+    </item>
+
 </layer-list>
