--- a/app/src/main/res/layout/activity_leader_board.xml
+++ b/app/src/main/res/layout/activity_leader_board.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.quarklab.volo.LeaderBoard"
-    android:background="@drawable/backgblue_png">
+    tools:context="com.quarklab.volo.LeaderBoard" >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,10 +19,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Leader Board"
+            android:text="Leader Board "
             android:id="@+id/title"
             android:textSize="30sp"
-            android:textColor="#FFF"
+            android:textColor="#2f2f2f"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
