--- a/app/src/main/res/drawable/button.xml
+++ b/app/src/main/res/drawable/button.xml
@@ -3,15 +3,14 @@
     <!-- Main button -->
     <item android:top="16dp" android:left="16dp" android:right="16dp" android:bottom="16dp" android:gravity="bottom|center_vertical">
         <shape android:shape="oval">
-            <solid android:color="#3B5998" />
+            <stroke android:color="#502f2f2f" android:width="@dimen/_1sdp" />
         </shape>
     </item>
 
 
-    <item android:top="80dp" android:left="80dp" android:right="80dp" android:bottom="80dp" android:gravity="bottom|center_vertical">
-        <shape android:shape="rectangle">
-            <solid android:color="#3b88c2" />
-            <corners android:radius="20dp" />
+    <item android:top="16dp" android:left="16dp" android:right="16dp" android:bottom="16dp" android:gravity="bottom|center_vertical">
+        <shape android:shape="oval">
+            <solid android:color="#8f738e" />
         </shape>
     </item>
 
