--- a/app/src/main/res/drawable/play_button_selected.xml
+++ b/app/src/main/res/drawable/play_button_selected.xml
@@ -19,8 +19,8 @@
             <corners android:radius="@dimen/button_inner_radius" />
             <gradient
                 android:angle="270"
-                android:startColor="#371D81"
-                android:endColor="#7D63C7"
+                android:startColor="#6f4b6e"
+                android:endColor="#7f5e7e"
                 android:type="sweep" />
         </shape>
     </item>
