--- a/app/src/main/res/drawable/play_button_unselected.xml
+++ b/app/src/main/res/drawable/play_button_unselected.xml
@@ -19,8 +19,8 @@
             <corners android:radius="@dimen/button_inner_radius" />
             <gradient
                 android:angle="270"
-                android:startColor="#553B9F"
-                android:endColor="#876DD1"
+                android:startColor="#7f5e7e"
+                android:endColor="#8f738e"
                 android:type="sweep" />
         </shape>
     </item>
