--- a/app/src/main/res/layout/activity_square_bash.xml
+++ b/app/src/main/res/layout/activity_square_bash.xml
@@ -19,7 +19,11 @@
         android:id="@+id/title"
         android:textSize="48sp"
         android:textColor="#FFF"
-        android:layout_marginTop="25sp"
+        android:layout_marginTop="@dimen/_100sdp"
+        android:shadowRadius="1"
+        android:shadowColor="#2f2f2f"
+        android:shadowDy="0"
+        android:shadowDx="0"
         android:layout_row="4"
         android:layout_column="0"
         android:layout_columnSpan="2"
@@ -46,6 +50,9 @@
             android:id="@+id/scoreText"
             android:textSize="28sp"
             android:layout_gravity="center|right"
+            android:shadowColor="#2f2f2f"
+            android:shadowDy="0"
+            android:shadowDx="0"
             android:textColor="#FFF"
             android:text="2500"
             />
