--- a/app/src/main/res/drawable/gameboard.xml
+++ b/app/src/main/res/drawable/gameboard.xml
@@ -1,27 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
-
     <item>
-        <shape android:shape="rectangle" >
-            <gradient
-                android:angle="360"
-                android:centerColor="#8f738e"
-                android:endColor="#8f738e"
-                android:gradientRadius="360"
-                android:startColor="#8f738e"
-                android:type="sweep" />
-
-        </shape>
-    </item>
-    <item
-        android:bottom="@dimen/_20sdp"
-        android:left="@dimen/_20sdp"
-        android:right="@dimen/_20sdp"
-        android:top="@dimen/_20sdp">
         <shape android:shape="rectangle" android:innerRadius="@dimen/_15sdp" >
-            <corners android:radius="@dimen/_15sdp" />
-            <solid android:color="#60375E" />
-            <stroke android:width="@dimen/_1sdp" android:color="#502f2f2f"/>
+            <solid android:color="#36315B" />
         </shape>
     </item>
 
