--- a/app/src/main/res/drawable/leaderboard_row.xml
+++ b/app/src/main/res/drawable/leaderboard_row.xml
@@ -13,12 +13,7 @@
     <item android:left="@dimen/_10sdp" android:right="@dimen/_10sdp" android:gravity="center_horizontal|center_vertical">
         <shape android:shape="rectangle" >
             <corners android:radius="@dimen/_10sdp" />
-            <gradient
-                android:angle="90"
-                android:endColor="#8f738e"
-                android:startColor="#8f738e"
-                android:centerColor="#8f738e"
-                android:type="linear" />
+            <solid android:color="#272143" />
         </shape>
     </item>
 
