--- a/app/src/main/res/drawable/textview.xml
+++ b/app/src/main/res/drawable/textview.xml
@@ -21,9 +21,9 @@
             <corners android:radius="@dimen/_10sdp" />
             <gradient
                 android:angle="90"
-                android:endColor="#80F5F5F5"
-                android:centerColor="#90F5F5F5"
-                android:startColor="#50F0F0F0"
+                android:endColor="#272143"
+                android:centerColor="#272143"
+                android:startColor="#272143"
                 android:type="linear" />
         </shape>
     </item>
