--- a/app/src/main/res/layout/activity_leader_board.xml
+++ b/app/src/main/res/layout/activity_leader_board.xml
@@ -26,7 +26,7 @@
             android:text="Leader Board "
             android:id="@+id/title"
             android:textSize="30sp"
-            android:textColor="#FFFFFF"
+            android:textColor="#272143"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
