--- a/app/src/main/res/drawable/oval_random.xml
+++ b/app/src/main/res/drawable/oval_random.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <!-- くぼみ -->
-    <item android:left="@dimen/_10sdp" android:right="@dimen/_10sdp" android:gravity="center_horizontal|center_vertical">
+    <item android:gravity="center_horizontal|center_vertical">
         <shape android:shape="oval" >
             <solid android:color="#102f2f2f" />
         </shape>
@@ -11,15 +11,13 @@
     <!-- グラデーション下地 -->
     <item android:left="@dimen/_10sdp" android:right="@dimen/_10sdp" android:gravity="center_horizontal|center_vertical">
         <shape android:shape="oval" >
-            <gradient
-                android:angle="90"
-                android:startColor="#553B9F"
-                android:endColor="#876DD1"
-                android:centerColor="#553B9F"
-                android:type="linear" />
+            <solid android:color="#7ec0ee" />
+            <!--<gradient-->
+                <!--android:angle="90"-->
+                <!--android:startColor="#FF3232"-->
+                <!--android:endColor="#579B00"-->
+                <!--android:centerColor="#FFE13C"-->
+                <!--android:type="linear" />-->
         </shape>
     </item>
-
-
-
 </layer-list>
