--- a/app/src/main/res/drawable/oval_red_button.xml
+++ b/app/src/main/res/drawable/oval_red_button.xml
@@ -11,15 +11,14 @@
     <!-- グラデーション下地 -->
     <item android:left="@dimen/_10sdp" android:right="@dimen/_10sdp" android:gravity="center_horizontal|center_vertical">
         <shape android:shape="oval" >
-            <gradient
-                android:angle="90"
-                android:endColor="#FF3232"
-                android:startColor="#EB1E1E"
-                android:centerColor="#EB1E1E"
-                android:type="linear" />
+        <solid android:color="#FF3232" />
+            <!--<gradient-->
+                <!--android:angle="90"-->
+                <!--android:endColor="#FF3232"-->
+                <!--android:startColor="#EB1E1E"-->
+                <!--android:centerColor="#EB1E1E"-->
+                <!--android:type="linear" />-->
         </shape>
     </item>
-
-
 
 </layer-list>
