--- a/app/src/main/res/drawable/oval_warm_button.xml
+++ b/app/src/main/res/drawable/oval_warm_button.xml
@@ -11,13 +11,13 @@
     <!-- グラデーション下地 -->
     <item android:left="@dimen/_10sdp" android:right="@dimen/_10sdp" android:gravity="center_horizontal|center_vertical">
         <shape android:shape="oval" >
-            <gradient
-                android:angle="90"
-                android:endColor="#FFE13C"
-                android:startColor="#FFB914"
-                android:centerColor="#FFB914"
-                android:type="linear" />
+            <solid android:color="#FFB914" />
+            <!--<gradient-->
+                <!--android:angle="90"-->
+                <!--android:endColor="#FFE13C"-->
+                <!--android:startColor="#FFB914"-->
+                <!--android:centerColor="#FFB914"-->
+                <!--android:type="linear" />-->
         </shape>
     </item>
-
 </layer-list>
