--- a/app/src/main/res/drawable/rectangle_random.xml
+++ b/app/src/main/res/drawable/rectangle_random.xml
@@ -15,9 +15,9 @@
             <corners android:radius="@dimen/_2sdp" />
             <gradient
                 android:angle="90"
-                android:startColor="#553B9F"
-                android:endColor="#876DD1"
-                android:centerColor="#553B9F"
+                android:startColor="#FF3232"
+                android:endColor="#579B00"
+                android:centerColor="#FFE13C"
                 android:type="linear" />
         </shape>
     </item>
