--- a/app/src/main/res/layout/activity_leader_board.xml
+++ b/app/src/main/res/layout/activity_leader_board.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_10sdp"
-        android:layout_marginLeft="@dimen/_20sdp"
+        android:layout_marginLeft="@dimen/_10sdp"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         >
@@ -26,7 +26,7 @@
             android:text="Leader Board "
             android:id="@+id/title"
             android:textSize="30sp"
-            android:textColor="#272143"
+            android:textColor="#fff"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
@@ -39,8 +39,6 @@
         android:layout_height="wrap_content"
         android:id="@+id/leaderBoardList"
         android:layout_alignParentTop="true"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
         android:layout_marginTop="@dimen/_60sdp"
         android:layout_centerHorizontal="true" />
     <!--<com.mopub.mobileads.MoPubView-->
