--- a/app/src/main/res/layout/activity_square_bash.xml
+++ b/app/src/main/res/layout/activity_square_bash.xml
@@ -18,7 +18,7 @@
         android:text="@string/title"
         android:id="@+id/title"
         android:textSize="48sp"
-        android:textColor="#272143"
+        android:textColor="#fff"
         android:layout_marginTop="@dimen/_100sdp"
         android:shadowRadius="1"
         android:shadowColor="#2f2f2f"
@@ -53,7 +53,7 @@
             android:shadowColor="#2f2f2f"
             android:shadowDy="0"
             android:shadowDx="0"
-            android:textColor="#272143"
+            android:textColor="#fff"
             android:text="2500"
             />
         <ImageView
