--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="warm">#FFE13C</color>
+    <color name="green">#579B00</color>
+    <color name="red">#FF3232</color>
+    <color name="white">#fff</color>
+    <color name="skyblue">#7ec0ee</color>
 </resources>
