--- a/app/src/main/res/drawable/play_button_unselected.xml
+++ b/app/src/main/res/drawable/play_button_unselected.xml
@@ -17,11 +17,7 @@
         android:top="1sp">
         <shape android:shape="rectangle" >
             <corners android:radius="@dimen/button_inner_radius" />
-            <gradient
-                android:angle="270"
-                android:startColor="#272143"
-                android:endColor="#272143"
-                android:type="sweep" />
+            <solid android:color="#272143" />
         </shape>
     </item>
 
