--- a/app/src/main/res/drawable/rectangle_warm_button.xml
+++ b/app/src/main/res/drawable/rectangle_warm_button.xml
@@ -13,12 +13,7 @@
     <item android:left="@dimen/_10sdp" android:right="@dimen/_10sdp" android:gravity="center_horizontal|center_vertical">
         <shape android:shape="rectangle" >
             <corners android:radius="@dimen/_2sdp" />
-            <gradient
-                android:angle="90"
-                android:endColor="#FFE13C"
-                android:startColor="#FFB914"
-                android:centerColor="#FFB914"
-                android:type="linear" />
+            <solid android:color="#FFB914"/>
         </shape>
     </item>
 
