--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="green">#579B00</color>
     <color name="red">#FF3232</color>
     <color name="white">#fff</color>
+    <color name="black">#000</color>
     <color name="skyblue">#7ec0ee</color>
 </resources>
