--- a/app/src/main/res/layout/activity_square_bash.xml
+++ b/app/src/main/res/layout/activity_square_bash.xml
@@ -7,7 +7,7 @@
     android:id="@+id/linearLayout"
     android:columnCount="2"
     android:rowCount="12"
-    android:background="@drawable/gameboard"
+    android:background="@drawable/night"
     android:layout_centerInParent="true"
     tools:context="com.quarklab.volo.SquareBash"
     android:orientation="vertical">
@@ -85,13 +85,14 @@
             android:layout_weight="1"
             />
         <ImageButton
-            android:layout_width="80sp"
-            android:layout_height="80sp"
+            style="@style/GlossyGradientButtonStyle"
+            android:layout_width="60sp"
+            android:layout_height="60sp"
             android:id="@+id/sound"
             android:padding="10sp"
-            android:background="@drawable/button"
             android:soundEffectsEnabled="false"
             android:src="@drawable/speaker"
+            android:elevation="0sp"
             android:layout_gravity="left|center_vertical"
             />
         <View
@@ -101,14 +102,15 @@
             />
         <ImageButton
             style="@style/GlossyGradientButtonStyle"
-            android:layout_width="100sp"
-            android:layout_height="100sp"
+            android:layout_width="80sp"
+            android:layout_height="80sp"
             android:id="@+id/play"
             android:text="@string/play"
             android:padding="5sp"
             android:soundEffectsEnabled="false"
             android:layout_marginBottom="10dp"
             android:src="@drawable/play"
+            android:elevation="0sp"
             android:layout_gravity="center_horizontal"/>
         <View
             android:layout_width="0dp"
@@ -116,14 +118,15 @@
             android:layout_weight="1"
             />
         <ImageButton
-            android:layout_width="80sp"
-            android:layout_height="80sp"
+            style="@style/GlossyGradientButtonStyle"
+            android:layout_width="60sp"
+            android:layout_height="60sp"
             android:id="@+id/trophy"
             android:padding="10sp"
             android:adjustViewBounds="true"
-            android:background="@drawable/button"
             android:soundEffectsEnabled="false"
             android:src="@drawable/trophy"
+            android:elevation="0sp"
             android:layout_gravity="right|center_vertical"
             />
 
