--- a/app/src/main/res/drawable/play_button_selected.xml
+++ b/app/src/main/res/drawable/play_button_selected.xml
@@ -1,23 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <!-- くぼみ -->
-    <item>
+    <item >
         <shape android:shape="rectangle" >
             <corners android:radius="@dimen/button_inner_radius" />
-            <solid android:color="#102f2f2f" />
-        </shape>
-    </item>
-
-    <!-- グラデーション下地 -->
-    <item
-        android:bottom="1sp"
-        android:left="1sp"
-        android:right="1sp"
-        android:top="1sp">
-        <shape android:shape="rectangle" >
-            <corners android:radius="@dimen/button_inner_radius" />
-            <solid android:color="#272143" />
+            <solid android:color="#2e4053" />
         </shape>
     </item>
 
