--- a/app/src/main/res/layout/activity_game_board.xml
+++ b/app/src/main/res/layout/activity_game_board.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gameboard"
+    android:background="@drawable/dawn"
     tools:context=".GameBoard"
     android:id="@+id/gameBoardLayout">
 
